in about.html, add link to users.html

--- a/about.html
+++ b/about.html
@@ -46,13 +46,40 @@
                         <li role="presentation"><a href="#">Timeline</a></li>
                         <li role="presentation" class="active"><a href="#">About</a></li>
                         <li role="presentation"><a href="#">Photos<span class="badge">123</span></a></li>
-                        <li role="presentation"><a href="#">Friends</a></li>
+                        <li role="presentation"><a href="users.html">Friends</a></li>
                     </ul>
                     <p class="navbar-text navbar-right"><a href="#">Edit Profile</a></p>
                 </div>
             </nav>
         
-            <div class="content">
+            <div class="content main-container">
+                <div class="row">
+                    <div class="col-md-12 header-bg">
+                        <h3 class="text-center">About</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        
+                        <h3>Basic Information</h3>
+                        <div class="table">
+                            <p class="table-row"><span class="table-cell"><strong>Birthday</strong>:</span> <span class="table-cell">July 31st, 1980</span></p>
+                            <p class="table-row"><span class="table-cell"><strong>College</strong>:</span> <span class="table-cell">Hogwarts College</span></p>
+                            <p class="table-row"><span class="table-cell"><strong>Hometown</strong>:</span> <span class="table-cell">Godrick's Hollow, England</span></p>
+                            <p class="table-row"><span class="table-cell"><strong>Currently Lives</strong>:</span> <span class="table-cell"> Goldrick's Hollow, England</span></p>
+                        </div>
+                        <h3>Contact Information</h3>
+                        <div class="table">
+                            <p class="table-row"><span class="table-cell"><strong>Email</strong>:</span> <span class="table-cell">harry_potter@hogwarts.edu</span></p>
+                        <p class="table-row"><span class="table-cell"><strong>Telephone</strong>:</span> 555-435-3256</span></p></div>
+                    </div>
+                    <div class="col-md-8">
+                        <h3>Words to Live By</h3>
+                        <p>Explicabo unde or incididunt, sit. Illo dicta so lorem but doloremque.</p>
+                        <h3>About Me</h3>
+                        <p>Explicabo unde or incididunt, sit. Illo dicta so lorem but doloremque. Culpa omnis for cupidatat. Aute irure dolorem consequat. Ut quaerat dolor. Eaque nequeporro yet id. Iure ullam. Inventore si, so unde. Accusantium voluptatem occaecat. Commodo reprehenderit, yet velit magna voluptas ut but doloremque. Consequat. Aperiam esse nihil for exercitationem but ipsa for velit. Magni enim aliquam but quaerat. Quasi vitae dolore vel magna. Exercitation ea consectetur or dolore incidunt and velit minima. Aliquid. Quasi beatae. Nequeporro sunt in. Occaecat proident quam, commodi. </p>
+                    </div>
+                </div>
             </div>
         </div>
 
