add additional changes

--- a/profile.html
+++ b/profile.html
@@ -30,11 +30,11 @@
             </div>
         </nav>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-md-3">
+            <div class="row row-eq-height">
+                <div class="col-md-3 right-border">
                     <div class="media">
-                        <div class="media-left">
-                            <img class="friend-pic"src="images/profile.png"/>
+                        <div id="profile-pic" class="media-left">
+                            <img src="images/profile.png"/>
                         </div>
                         <div class="media-body media-middle">
                             <a href="#">Harry Potter</a><br/>
@@ -202,10 +202,7 @@
                         </form>
                         </div>
                     </div>
-                    <!--end friend comment-->     
-
-                    
-                    
+                    <!--end friend comment-->         
                 </div>
             </div>
         </div>
