--- a/users.html
+++ b/users.html
@@ -65,7 +65,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
@@ -77,7 +77,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
@@ -89,7 +89,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
@@ -103,7 +103,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
@@ -115,7 +115,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
@@ -127,7 +127,7 @@
                                 <img class="friend-pic"src="images/profile.png"/>
                             </div>
                             <div class="media-body media-middle">
-                                <a href="#">Hermine Granger</a><br/>
+                                <a href="#">Hermione Granger</a><br/>
                             432 Friends
                             </div>
                             <div class="media-right media-middle">
